codama-macros/tests/node_attribute/number_type_node_endian_already_set.fail.stderr
error: endian is already set
 --> tests/node_attribute/number_type_node_endian_already_set.fail.rs:3:31
  |
3 | #[codama(node(number_type(be, le, u32)))]
  |                               ^^
